<resources>
    <string name="app_name">weChat</string>
    <string name="login_label_username">帐号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登 录</string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="login_username_hint">Email或手机号</string>
    <string name="login_register_link">没有帐号？点击注册 </string>
</resources>
