<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login_Activity"
    android:background="@drawable/background_login">

    <ImageButton
        android:id="@+id/ib_return"
        android:src="@drawable/icon_return"
        android:scaleType="centerInside"
        android:layout_width="50sp"
        android:background="#00000000"
        android:layout_height="60dp"
        android:paddingTop="5dp"/>
    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="@drawable/background_login_div_bg"
        android:padding="15dip">
        <!-- 账号 -->
        <TextView
            android:id="@+id/login_user_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/login_label_username" />

        <EditText
            android:id="@+id/eusername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_user_input"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:singleLine="true" />
        <!-- 密码 text -->
        <TextView
            android:id="@+id/login_password_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eusername"
            android:layout_marginTop="3dp"
            android:text="@string/login_label_password" />

        <EditText
            android:id="@+id/epassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_input"
            android:inputType="textPassword"
            android:password="true"
            android:singleLine="true" />

        <!-- 登录button -->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/epassword"
            android:layout_alignRight="@id/epassword"
            android:background="@drawable/blue_button"
            android:text="@string/login_label_signin" />



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <Button  android:id="@+id/toRegister"
            android:text="@string/login_register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"

            android:textColor="#888"
            android:textColorLink="#FF0066CC"
            />
        <ImageView android:id="@+id/miniTwitter_logo"
            android:src="@drawable/cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="25dp"
            />
        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/miniTwitter_logo"
            android:layout_alignBottom="@id/miniTwitter_logo"
            android:paddingBottom="8dp"
            />

        <RadioButton
            android:id="@+id/radioRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="@id/toRegister"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/toRegister"
            android:text="记住密码"
            android:checked="true"/>

    </RelativeLayout>

</LinearLayout>